fix: change align-items value to get rid of warning message

--- a/src/app/features/bookmarks/containers/bookmark-details-page/bookmark-details-page.component.scss
+++ b/src/app/features/bookmarks/containers/bookmark-details-page/bookmark-details-page.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   flex-grow: 1;
 
   ._link {
